# qecirc-website

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE-DATA  README.md  astro.config.mjs  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  pytest.ini  railpack.json
.claude/agents/: add-new-circuit.md  review.md
.claude/commands/: add-circuit.md
.github/: SECURITY.md  renovate.json5
.github/ISSUE_TEMPLATE/: bug-report.yml  circuit-submission.yml  data-correction.yml  feature-request.yml
.github/workflows/: ci.yml  railway-preview.yml
data/migrations/: 001_initial.sql  002_flatten_functionalities.sql  003_multi_format_and_links.sql  004_code_properties.sql  005_tools.sql  006_canonical_hash.sql  007_two_qubit_gate_count.sql  008_circuit_qec_id.sql  009_rename_description_to_notes.sql  010_circuit_originals.sql  011_symplectic_storage.sql  012_drop_css_views.sql
data_yaml/circuits/: carbon-code--mqt-encoding.cirq  carbon-code--mqt-encoding.qasm  carbon-code--mqt-encoding.stim  carbon-code--mqt-encoding.yaml  steane-code--non-ft-optimized-zero-state-preparation.cirq  steane-code--non-ft-optimized-zero-state-preparation.qasm  steane-code--non-ft-optimized-zero-state-preparation.stim  steane-code--non-ft-optimized-zero-state-preparation.yaml  steane-code--standard-encoding.cirq  steane-code--standard-encoding.qasm  steane-code--standard-encoding.stim  (+1 more)
docs/: adding-circuits-agent.md  adding-circuits.md  database.md
scripts/: regenerate_h_logical.py  smoke.sh  validate-yaml.mjs  validate_circuits.py
src/: middleware.ts
(+104 files in other folders)
