[project]
name = "qecirc-website"
version = "0.1.0"
description = "QECirc — quantum error correction circuit library"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "stim",
    "mqt-qecc @ git+https://github.com/munich-quantum-toolkit/qecc.git@encoding-circuits",
    "pyyaml",
    "stimcirq",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
