[project]
name = "qecirc-website"
version = "0.1.0"
description = "QECirc — quantum error correction circuit library"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0,<3",
    "stim>=1.15,<2",
    "mqt-qecc @ git+https://github.com/munich-quantum-toolkit/qecc.git@encoding-circuits",
    "pyyaml>=6,<7",
    "stimcirq>=1.15,<2",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
